Use Arrays.asList for team tab completion